--- a/docsrc/yadex.6
+++ b/docsrc/yadex.6
@@ -302,7 +302,7 @@ André Majorel (http://www.teaser.fr/~amajorel/)
 .nf
 Contributors:
 Andrew J. Apted (http://www.netspace.net.au/~ajapted/)
-Matthew W. Miller (mwmiller@columbus.rr.com)
+Matthew W. Miller (zbp+ee+fhozhybp=eryyvzjz)
 .fi
 
 Yadex is derived from DEU 5.21 that was written by Raphaël Quinet,
